# game_dinosaurus

./: .travis.yml  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: ccpp.yml  pythonapp.yml
src/: animation.cpp  animation.h  cactus.cpp  cactus.h  dino.cpp  dino.h  dino_state.h  game.cpp  game.h  ground.cpp  ground.h  main  main.cpp  replay.h
src/fsm/: StateMachine.h
src/fsm/actions/: Maybe.h
test/: record.gm  test_game.cpp  test_sfml.cpp
